kubernetes/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080  # optional, or leave blank for auto-assign
